Removed draft notes, updated metadata

--- a/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
@@ -11,7 +11,7 @@ The network configuration must not be changed in any way during the migration. I
 
 Ports enabled::
 * 22 - SSH
-* 443 - UIs and VDDK
+* 443 - CloudForms, Red Hat Virtualization Manager, and VDDK
 * 902 - CloudForms to VMware
 * 5480 - `virt-v2v` to vCenter
 
