--- a/doc-V2V_Guide/cfme/master.adoc
+++ b/doc-V2V_Guide/cfme/master.adoc
@@ -1,4 +1,4 @@
-= Migration Guide
+= Infrastructure Migration Solution Guide
 :imagesdir: images
 :vernum: 1.0
 :toc: left
@@ -13,13 +13,6 @@ include::common/attributes/cfme.adoc[]
 :cfme:
 
 :numbered:
-
-*This draft is a work in progress and internal only.*
-
-* link:https://docs.google.com/document/d/13MKOhFta3fVU_QKPBOGBXTj9fHJGWk8g3h0Ph2WtrEs/edit?ts=5b17ef07#heading=h.6jbfzvwb9yos[Content Plan]
-* Google docs version for link:https://docs.google.com/document/d/1Wfv7HvKGCdiQ8gw63G47F1uRwbu5etGGWqG5Pp_edfY/edit?usp=sharing[comments]
-* GA date: August 14, 2018
-* Contacts: link:mailto:sbream@redhat.com[Steve Bream] (CS), link:mailto:apinnick@redhat.com[Avital Pinnick] (TW)
 
 [[Introduction]]
 == Introduction
