--- a/doc-Installing_on_SCVMM/topics/installation.adoc
+++ b/doc-Installing_on_SCVMM/topics/installation.adoc
@@ -53,7 +53,7 @@ endif::cfme[]
 [[deploying-the-appliance-SCVMM]]
 === Deploying the Appliance
 
-Create a blank VHD to be used for the database disk and add it to your SCVMM Library, then create a template for the {product-title_short} appliance.
+Create a blank VHD to be used for the database disk and add it to your SCVMM Library, create a template for the {product-title_short} appliance, then deploy a virtual machine to run the appliance.
 
 . Create a blank VHD to be used for the DB disk and add it to your SCVMM Library. Run this command on a node containing Hyper-V.
 +
@@ -70,7 +70,7 @@ $ New-VHD -Path 'C:\path\to\my\newvdisk.vhdx' -SizeBytes 20gb -Dynamic
 PS C:\Users\Administrator.MS01> 'Refresh-LibraryShare'
 ----
 +
-. Run the following PowerShell script to create a deployable template for the {product-title_short} appliance:
+. Run the following PowerShell script to create a deployable template for the {product-title_short} appliance, substituting values for your environment:
 +
 ----
 $networkName = "yourNetwork"
@@ -108,6 +108,26 @@ $HWProfile `
 Remove-HardwareProfile -HardwareProfile $templateName
 ----
 +
-. NEXT steps
+. Deploy a virtual machine to a host group from the created template by running a script using PowerShell.
++
+[NOTE]
+======
+Substitute these values in your PowerShell script:
 
-Your SCVMM environment now contains a running {product-title_short} appliance.
+* $hostGroup = "NAME_OF_HOST_GROUP_TO_DEPLOY_TO"
+* $scvmmServer = "NAME_OF_YOUR_SCVMM_SERVER"
+* $templateName = "NAME_OF_CFME_TEMPLATE"
+* $vmName = "NAME_OF_YOUR_NEW_VM"
+======
++
+Run the following script using PowerShell, substituting values for your environment:
++
+----
+$tpl = Get-SCVMTemplate -Name $templateName -VMMServer $scvmmServer
+$vm_hg = Get-SCVMHostGroup -Name $hostGroup -VMMServer $scvmmServer
+$vmc = New-SCVMConfiguration -VMTemplate $tpl -Name $vmName -VMHostGroup $vm_hg
+Update-SCVMConfiguration -VMConfiguration $vmc
+New-SCVirtualMachine -Name $vmName -VMConfiguration $vmc
+----
+
+Your SCVMM environment now contains a running {product-title_short} appliance which you can configure.
