--- a/doc-V2V_Guide/cfme/doc/assembly_Installation.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Installation.adoc
@@ -11,4 +11,4 @@ include::modules/con_Prerequisites.adoc[leveloffset=+1]
 include::modules/proc_Creating_rhv_conversion_hosts.adoc[leveloffset=+1]
 include::modules/proc_Configuring_rhv_conversion_hosts.adoc[leveloffset=+1]
 
-After you have installed and configured your environment, you are ready to begin the discovery and assessment phase.
+After you have installed and configured your environment, you can begin the discovery and assessment phase.
