--- a/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Prerequisites.adoc
@@ -26,7 +26,7 @@ See the link:https://access.redhat.com/documentation/en-us/red_hat_virtualizatio
 Red Hat Virtualization Hosts 4.2.4 or later installed::
 See  link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/installation_guide/#Installing_RHVH[Installing Red Hat Virtualization Host] in the _Red Hat Virtualization Installation Guide_.
 
-Data and ISO storage domains attached to RHV datacenter::
+Data and ISO storage domains attached to the RHV data center::
 See link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-Preparing_and_Adding_NFS_Storage[Preparing and Adding NFS Storage] and  link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Attaching_an_iso_domain[Attaching an Existing ISO domain to a Data Center] in the _Red Hat Virtualization Administration Guide_.
 
 VirtIO and Guest Tool images uploaded to the ISO storage domain::
