--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts.adoc
@@ -10,5 +10,5 @@ Configure the RHV conversion hosts:
 . Select `V2V - Transformation Method` from the tag drop-down list and `VDDK` as the assigned value.
 . Click `Save`.
 . Select the same host, click the `Configuration` drop-down button, and select `Edit this item`.
-. In the `Default` tab of the Endpoints section, enter the Username `root` and the password.
+. In the `Default` tab of the Endpoints section, enter the `Username` *root* and the password.
 . Click `Validate`. If a success message is displayed, click `Save`.
