--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -59,11 +59,11 @@ During migration, the clock displaying the migration plan progress (in menu:Comp
 ====
 
 [discrete]
-== Advanced Migration: Automating Pre- and Post-Migration Tasks with Ansible
+== Advanced Migration Option: Automating Pre- and Post-Migration Tasks with Ansible
 
 Certain tasks may need to be performed before or after a virtual machine is migrated, for example, removing web server virtual machines from a load-balancing pool before migration and adding them back to the pool after migration.
 
-When you create a migration plan, there is an option to specify an Ansible service catalog item to be run before or after each virtual machine within the plan is migrated.
+When you create a migration plan, you can specify an Ansible service catalog item to be run before or after each virtual machine within the plan is migrated.
 
 [NOTE]
 ====
