--- a/doc-V2V_Guide/cfme/doc/modules/ref_Best_practices.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/ref_Best_practices.adoc
@@ -1,5 +1,4 @@
 [id="Best_practices"]
-[discrete]
 = Best Practices
 
 * Create migration groups, so that you are not migrating all of your virtual machines at the same time. The following questions provide guidelines:
@@ -18,7 +17,7 @@
 
 * Keep linked applications together, so that they migrate at the same time.
 
-* Rebooting or deleting snapshots should be done before the migration, to reduce the risk of failure.
+* Reboot or delete snapshots before the migration, to reduce the risk of failure.
 
 * Schedule your migration carefully, to minimize the impact on your users.
 
@@ -30,6 +29,6 @@
 
 * Ensure that you have sufficient space for the migration. The migration process does not delete the original virtual machines.
 
-* Minimize the impact on your environment, by creating multiple migration plans to control and throttle the migration process.
+* Minimize the impact on your environment by creating multiple migration plans to control and throttle the migration process.
 
 * Prepare your users for downtime.
