--- a/doc-V2V_Guide/cfme/doc/modules/ref_Migration_example.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/ref_Migration_example.adoc
@@ -1,5 +1,5 @@
 [id="Migration_example"]
-[discrete]
+// [discrete]
 = Migration Example
 
 This migration example can help you to estimate how long your migration will take.
@@ -15,5 +15,5 @@ This environment took 1 hour and 30 minutes to migrate:
 
 ** Strong host (40 cores, 500 GB RAM)
 ** Fast SSD XtremIO storage
-** Fiber Channel 8 interface for host-to-storage connection
+** Fibre Channel 8 interface for host-to-storage connection
 ** 10GbE network interface cards for all other connections
