--- a/common/create-playbook-service-catalog-item.adoc
+++ b/common/create-playbook-service-catalog-item.adoc
@@ -5,7 +5,7 @@
 * Before creating an Ansible service, at least one repository, one playbook, and one credential must exist in the {product-title} inventory. Check your inventory and add the appropriate resources before creating an Ansible service. For more information, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/managing_providers/#automation_management_providers[Automation Management Providers] in _Managing Providers_.
 * Debugging verbosity is available for Ansible playbook catalog items. Selecting a higher verbosity value provides more detailed output as the playbook executes. *0 (Normal)* is the default value. *1 (Verbose)* will yield return data while a value of *3 (Debug)* provides connection attempt and task invocation details. Higher levels, such as *4 (Connection)* can be useful for debugging SSH connections. Use *5 (WinRM Debug)* when debugging WinRM connections.
 * Using Ansible playbooks to populate dynamic dialog fields is not recommended due to delay times caused by the overhead of interaction between systems.
-* Only users with admin privileges can run a service dialog based on a playbook.
+* Only users with administrator privileges can run a service dialog based on a playbook.
 ====
 
 . Navigate to menu:Services[Catalogs].
