Modified the section on Data Collection for RHV as per feedback. Removed references to 3.x version as it's no longer supported.

--- a/common/introduction.adoc
+++ b/common/introduction.adoc
@@ -145,7 +145,7 @@ Event:: A trigger to check a condition.
 
 Event Monitor:: Software on the {product-title} appliance which monitors external providers for events and sends them to the {product-title} server.
 
-Host:: A computer running a hypervisor, capable of hosting and monitoring virtual machines. Supported hypervisors include RHEV-H, VMware ESX hosts, Windows Hyper-V hosts.
+Host:: A computer running a hypervisor, capable of hosting and monitoring virtual machines. Supported hypervisors include RHV-H, VMware ESX hosts, Windows Hyper-V hosts.
 
 Instance/Cloud Instance:: A on-demand virtual machine based upon a predefined image and uses a scalable set of hardware resources such as CPU, memory, networking interfaces.
 
