Added SSH transformation, some content changes.

--- a/doc-V2V_Guide/cfme/doc/assembly_Installation.adoc
+++ b/doc-V2V_Guide/cfme/doc/assembly_Installation.adoc
@@ -10,5 +10,4 @@ The installation phase includes the following requirements:
 include::modules/con_Prerequisites.adoc[leveloffset=+1]
 include::modules/proc_Creating_rhv_conversion_hosts.adoc[leveloffset=+1]
 include::modules/proc_Configuring_rhv_conversion_hosts.adoc[leveloffset=+1]
-
-After you have installed and configured your environment, you can begin the discovery and assessment phase.
+include::modules/proc_Configuring_rhv_conversion_hosts_for_ssh_transformation.adoc[leveloffset=+1]
