--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -46,18 +46,21 @@ If you are migrating a small number of virtual machines, you can use the migrati
 .. Click *Import*, browse to the CSV file, and click *Open*.
 
 . Select the virtual machines to migrate and click *Next*.
++
+You can select Ansible playbook services to run on the virtual machines in the migration plan before or after the migration. See xref:Option_Pre_and_Post_Migration_Tasks_with_Ansible[Advanced Migration Option: Automating Pre- and Post-Migration Tasks with Ansible].
 
 . Select *Start Migration Immediately* and click *Create*.
 
 . Click *Close*. The migration plan may take some time to complete. *In Progress Plans*, the amount of data being transferred, the number of virtual machines being migrated, and the elapsed time are displayed.
 +
-When the migration is complete, the migration plan is displayed under *Completed Migrations*, with the number of successfully migrated virtual machines. A *Retry* option enables you to re-migrate any virtual machines in this plan that failed to migrate.
+When the migration is complete, the migration plan is displayed under *Completed Migrations*, with the number of successfully migrated virtual machines. A *Retry* option enables you to re-migrate any virtual machines in this plan that failed to migrate. See xref:Retrying_a_Migration_Plan[Retrying a Migration Plan].
 
 [NOTE]
 ====
-During migration, the clock displaying the migration plan progress (in menu:Compute[Migration]) may be a few seconds ahead of the clock that appears in the migration plan details (menu:Compute[Migration>__Migration Plan__]). This is because the migration plan clock displays the total time to run the migration plan, while the migration plan details clock displays the total time to migrate the virtual machines.
+During migration, the counter displaying the migration plan progress (in menu:Compute[Migration]) may be a few seconds ahead of the counter that appears in the migration plan details (menu:Compute[Migration>__Migration Plan__]). This is because the migration plan counter displays the total time to run the migration plan, while the migration plan details counter displays the time to migrate the virtual machines.
 ====
 
+[[Option_Pre_and_Post_Migration_Tasks_with_Ansible]]
 [discrete]
 == Advanced Migration Option: Automating Pre- and Post-Migration Tasks with Ansible
 
