--- a/doc-V2V_Guide/cfme/doc/modules/proc_Creating_rhv_conversion_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Creating_rhv_conversion_hosts.adoc
@@ -29,8 +29,8 @@ Create one or more RHV conversion hosts:
 ----
 all:
   hosts:
-    _conversion_host1.com_:
-    _conversion_host2.com_:
+    _host1_: _host1.example.com_
+    _host2_: _host2.example.com_
   vars:
     ansible_ssh_private_key_file: /etc/pki/ovirt-engine/keys/engine_id_rsa
     v2v_vddk_package_name=VMware-vix-disklib-_version_.x86_64.tar.gz
