--- a/doc-V2V_Guide/cfme/doc/modules/ref_Discovery_questions.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/ref_Discovery_questions.adoc
@@ -3,26 +3,34 @@
 
 The following questions will guide you through the discovery process:
 
-* What am I migrating?
-+
+What am I migrating?::
 Identify the hosts and virtual machines to be migrated. If your deployment is large and complex, you may want to divide your resources into migration groups.
 
-* What is the maximum number of resources that I can migrate?
-+
+What is the maximum number of resources that I can migrate?::
 There is no maximum number of disks or virtual machines that you can migrate. However, you may not want to migrate all your virtual machines at the same time, in order to minimize the impact on your users. The maximum number of NICs that you can migrate is 4.
 
-* What resources will my target environment require?
-+
+What operating systems can I migrate?::
+The following operating systems are currently supported:
+
+* Red Hat Enterprise Linux 3 to 7
+* CentOS 3 to 7
+* Scientific Linux 3 to 7
+* Oracle Linux
+* Fedora
+* SLES 10 and later
+* OpenSUSE 10 and later
+* Debian 6 and later
+* Ubuntu 10.04, 12.04, 14.04, 16.04, and later
+* Windows XP to Windows 10/Windows Server 2016
+
+What resources will my target environment require?::
 Your target environment must be large enough to hold the migrated virtual machines, in addition to the original VMware virtual machines. The VMware virtual machines are not affected by the migration process. Their power state after the migration will be the same as before.
 
-* What am I missing?
-+
+What am I missing?::
 Identify resource gaps, such as bandwidth, storage, licenses, or a suitable maintenance window.
 
-* How long will the migration take?
-+
+How long will the migration take?::
 There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis. It may be possible to do a phased migration of your applications, if they are distributed in a high-availability architecture, without downtime at the application layer.
 
-* What impact will the migration have on my users?
-+
+What impact will the migration have on my users?::
 Assess the effect the migration may have on a production environment. Check whether users will lose access to critical applications.
