--- a/doc-V2V_Guide/cfme/doc/modules/con_Troubleshooting.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/con_Troubleshooting.adoc
@@ -1,21 +1,32 @@
 [id='ref_Troubleshooting']
 = Troubleshooting
 
+[[Remigrating_Virtual_Machines]]
 [discrete]
-== Re-migrating Virtual Machines
+== Remigrating Virtual Machines
 
-If a migration fails for any reason (for example, network communication between the source and target providers is disrupted during the migration process), you can re-migrate the virtual machines:
+You can remigrate previously migrated virtual machines:
 
-. Delete any target virtual machines that were created during the failed migration. Otherwise, the re-migration will fail because a target machine with the same name already exists.
-. Delete disks that were created in the target datastore during the failed migration to free up space.
+. Delete the target virtual machines corresponding to the source virtual machines that you are re-migrating. Otherwise, the remigration will fail because a target machine with the same name already exists.
+. Delete the disks belonging to these virtual machines, which were created in the target datastore during the earlier migration, to free up space.
 . Create a xref:CSV_file[CSV file] with the names and, optionally, providers, of the source virtual machines.
 +
 [NOTE]
 ====
-The virtual machines cannot be discovered by the migration plan because they are marked in the CloudForms VMDB as `migrated`.
+The virtual machines cannot be discovered automatically by the migration plan because they are marked in the CloudForms VMDB as `migrated`.
 ====
 
-. Create and run a migration plan, using the CSV file to import the virtual machines.
+. Create and run a new migration plan, using the CSV file to import the virtual machines.
+
+[[Retrying_a_Migration_Plan]]
+[discrete]
+== Retrying a Migration Plan
+
+If one or more virtual machines in a migration plan fails to migrate, the plan's migration status is `Failed`. You can retry a migration plan to migrate the virtual machines that failed to migrate:
+
+. Click the migration plan to go to the details page to identify the virtual machines that failed to migrate.
+. Delete the target virtual machines corresponding to the source virtual machines that failed to migrate. Otherwise, the retry will fail because a target machine with the same name already exists.
+. Go to menu:Compute[Migration], select `Failed Migrations`, select the failed migration plan, and click `Retry`.
 
 [discrete]
 == Log Files
