--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts.adoc
@@ -1,14 +1,15 @@
 [id="Configuring_rhv_conversion_hosts"]
 = Configuring RHV Conversion Hosts
 
-Configure the RHV conversion hosts:
+Configure the RHV conversion hosts in CloudForms:
 
-. In CloudForms, go to menu:Compute[Infrastructure > Hosts].
-. Select a Red Hat Virtualization Host.
+. Go to menu:Compute[Infrastructure > Hosts] and select a Red Hat Virtualization Host.
 . Click the `Policy` drop-down button and select `Edit Tags`.
 . Select `V2V - Transformation Host` from the tag drop-down list and `t` as the assigned value.
-. Select `V2V - Transformation Method` from the tag drop-down list and `VDDK` as the assigned value.
+. Select `V2V - Transformation Method` from the tag drop-down list and either `VDDK` or `SSH` as the assigned value.
 . Click `Save`.
 . Select the same host, click the `Configuration` drop-down button, and select `Edit this item`.
 . In the `Default` tab of the Endpoints section, enter the `Username` *root* and the password.
 . Click `Validate`. If a success message is displayed, click `Save`.
+
+If you are using `VDDK` transformation, go to xref:Discovery_and_Assessment[]. If you are using `SSH` transformation, go to xref:Configuring_rhv_conversion_hosts_for_ssh_transformation[].
