add review suggestion

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
@@ -161,7 +161,15 @@ image:2320.png[]
 ==== Initial Workflow
 To use this feature, you will need to do the following before creating a provision request.
 
-. Add the *ISO Datastore*. The Red Hat Virtualization Manager system must have already been discovered or added into the VMDB. For more information, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7-Beta/html-single/managing_providers/#adding_a_red_hat_enterprise_virtualization_manager_provider[Adding a Red Hat Enterprise Virtualization Manager Provider] in _Managing Providers_.
+[NOTE]
+====
+* The Red Hat Virtualization Manager system must have already been discovered or added into the VMDB. For more information, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7-Beta/html-single/managing_providers/#adding_a_red_hat_enterprise_virtualization_manager_provider[Adding a Red Hat Enterprise Virtualization Manager Provider] in _Managing Providers_. 
+* For more information on uploading an ISO:
+** Red Hat Virtualization 4.1 and below, see https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#sect-The_ISO_Uploader_Tool[ISO Uploader Tool]; 
+** Red Hat Virtualization 4.2, see https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/html-single/administration_guide/#Uploading_Images_to_a_Data_Storage_Domain_storage_tasks[Uploading Images to a Data Storage Domain]. 
+====
+
+. Add the *ISO Datastore*. 
 . Refresh the *ISO Datastore*.
 . Create a *System Image Type*.
 . Set the *ISO Image Type*.
