--- a/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_for_ssh_transformation.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/proc_Configuring_rhv_conversion_hosts_for_ssh_transformation.adoc
@@ -35,6 +35,7 @@ SSH_AUTH_SOCK=/tmp/ssh-_Gi2oSn44DHNL_/agent.65904; export SSH_AUTH_SOCK;
 SSH_AGENT_PID=65905; export SSH_AGENT_PID;
 echo Agent pid 65905;
 
+# sudo -u vdsm SSH_AUTH_SOCK=/tmp/ssh-_Gi2oSn44DHNL_/agent.65904 ssh-add
 # sudo -u vdsm \
     SSH_AUTH_SOCK=/tmp/ssh-_Gi2oSn44DHNL_/agent.65904 ssh root@_host1.example.com_
 ----
