--- a/doc-V2V_Guide/cfme/doc/modules/ref_Discovery_questions.adoc
+++ b/doc-V2V_Guide/cfme/doc/modules/ref_Discovery_questions.adoc
@@ -12,16 +12,10 @@ There is no maximum number of disks or virtual machines that you can migrate. Ho
 What operating systems can I migrate?::
 The following operating systems are currently supported:
 
-* Red Hat Enterprise Linux 3 to 7
-* CentOS 3 to 7
-* Scientific Linux 3 to 7
-* Oracle Linux
-* Fedora
-* SLES 10 and later
-* OpenSUSE 10 and later
-* Debian 6 and later
-* Ubuntu 10.04, 12.04, 14.04, 16.04, and later
-* Windows XP to Windows 10/Windows Server 2016
+* Red Hat Enterprise Linux 3.9, 4, 5, 6, 7.1 and later
+* Windows 7, 8, 8.1, and 10
+* Windows Server 2008, 2008 R2, 2012, 2012 R2, and 2016
+* SUSE Linux Enterprise Server 10, 11, and 12
 
 What resources will my target environment require?::
 Your target environment must be large enough to hold the migrated virtual machines, in addition to the original VMware virtual machines. The VMware virtual machines are not affected by the migration process. Their power state after the migration will be the same as before.
